operator/pkg/gateway-api/testdata/gateway/httproute-backendtlspolicy-valid/input/httproute-and-backendtlspolicy.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-same-namespace
  namespace: gateway-conformance-infra
spec:
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 172.18.255.196
        ipMode: VIP
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-same-namespace-with-https-listener
  namespace: gateway-conformance-infra
spec:
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 172.18.255.197
        ipMode: VIP
---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVORENDQXB5Z0F3SUJBZ0lSQUtEL0JMRkJmd0tJWjBXR3JIdFRINmd3RFFZSktvWklodmNOQVFFTEJRQXcKZHpFZU1Cd0dBMVVFQ2hNVmJXdGpaWEowSUdSbGRtVnNiM0J0Wlc1MElFTkJNU1l3SkFZRFZRUUxEQjEwWVcxdApZV05vUUdabFpHOXlZUzVzWVc0Z0tGUmhiU0JOWVdOb0tURXRNQ3NHQTFVRUF3d2tiV3RqWlhKMElIUmhiVzFoClkyaEFabVZrYjNKaExteGhiaUFvVkdGdElFMWhZMmdwTUI0WERUSXpNREl5TVRFeE1EZzBNMW9YRFRJMU1EVXkKTVRFeU1EZzBNMW93VVRFbk1DVUdBMVVFQ2hNZWJXdGpaWEowSUdSbGRtVnNiM0J0Wlc1MElHTmxjblJwWm1sagpZWFJsTVNZd0pBWURWU [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRRENHY3Z0Q1VWWTZxVm8KSHF0blQvdGFKWWp1QUFuR1p6SU9MVXFqMnBZUTBDK2pIK3ZCMkMzNHM4aVNLVWN6Q2ZkT2EySGRBSEpsNXJ2NApOQktQTXBCOFJROCtVN0hqN05sMEo0UEREZUdzN0VacHRaZUgrK0tMMnNFTTBIRy9OdGtEOVFrdWlDMmQxYmNEClkwWWRwd01MWVdBVEtBcEo0QXhua1BCcGRMWXh5eFp3WFUzVXNFRVpoTm83UXdYQUlNaEJxYXZ1a1htTGZ2K08KNXpaKzNRbjdiRmFvUkFXSy9WeDk0clhueDVyRzM0KzgxaFc2YlhaS082dlpUQjhKd1hmdElYZU5ESmlTRnpHYQp6aGhoV1kyc0NRd2Frc [...]
kind: Secret
metadata:
  name: tls-validity-checks-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendtlspolicy
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
      namespace: gateway-conformance-infra
  hostnames:
    - abc.example.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-system-ca-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy-system-ca
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-host-mismatch-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy-host-mismatch
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-cert-mismatch-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy-cert-mismatch
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
    - name: "btls"
      protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-system-ca-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
    - name: "btls"
      protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-host-mismatch-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
    - name: "btls"
      protocol: TCP
      appProtocol: HTTPS
      port: 443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-cert-mismatch-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
    - name: "btls"
      protocol: TCP
      appProtocol: HTTPS
      port: 443
      targetPort: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: normative-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: "backendtlspolicy-test"
      sectionName: "btls"
  validation:
    caCertificateRefs:
      - group: ""
        kind: ConfigMap
        # This ConfigMap is generated dynamically by the test suite.
        # It contains the CA certificate used to sign the tls-backend serving certificate.
        name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: system-ca
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-system-ca-test
      sectionName: "btls"
  validation:
    wellKnownCACertificates: System
    hostname: "abc.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: host-mismatch
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: "backendtlspolicy-host-mismatch-test"
      sectionName: "btls"
  validation:
    caCertificateRefs:
      - group: ""
        kind: ConfigMap
        # This ConfigMap is generated dynamically by the test suite.
        # It contains the CA certificate used to sign the tls-backend serving certificate.
        name: "tls-checks-ca-certificate"
    hostname: "mismatch.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: cert-mismatch
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: "backendtlspolicy-cert-mismatch-test"
      sectionName: "btls"
  validation:
    caCertificateRefs:
      - group: ""
        kind: ConfigMap
        # This ConfigMap is generated dynamically by the test suite.
        # It contains a random, unused CA certificate to force validation to fail.
        name: "mismatch-ca-certificate"
    hostname: "abc.example.com"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: tls-checks-ca-certificate
  namespace: gateway-conformance-infra
data:
  "ca.crt": |
    -----BEGIN CERTIFICATE-----
    MIIFkTCCA3mgAwIBAgIUH3uq38eX9d6cECwygoJk9oNm0W0wDQYJKoZIhvcNAQEL
[...]
    9OfTOO6MMca9wAJDLKxMAKvbzUKLJlwHCrJgj38HwxNOUuiydw==
    -----END CERTIFICATE-----
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: mismatch-ca-certificate
  namespace: gateway-conformance-infra
data:
  "ca.crt": |
    -----BEGIN CERTIFICATE-----
    MIIFkTCCA3mgAwIBAgIUH3uq38eX9d6cECwygoJk9oNm0W0wDQYJKoZIhvcNAQEL
[...]
    9OfTOO6MMca9wAJDLKxMAKvbzUKLJlwHCrJgj38HwxNOUuiydw==
    -----END CERTIFICATE-----
